# stackgen

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
stackgen/core/: template_engine.py
stackgen_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stackify/cli/: commands.py  main.py
stackify/core/: generator.py
stackify/templates/airflow/: dag.py.j2
stackify/templates/base/: requirements.txt.j2
stackify/templates/docker/: docker-compose.yml.j2
