[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"stackgen" = ["templates/**/*"]

[project]
name = "stackgen-cli"
version = "0.1.8"
description = "CLI tool to bootstrap data engineering projects (Spark, Kafka, Airflow scaffolding)"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"

authors = [
    { name = "Minhaz Alam", email = "minhazalam365@gmail.com" }
]

license = { file = "LICENSE" }

keywords = ["data-engineering", "cli", "spark", "kafka", "airflow", "pipeline", "scaffolding"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "typer>=0.9.0",
    "questionary>=2.0.0",
    "jinja2>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/minhazalam/stackgen"
Repository = "https://github.com/minhazalam/stackgen"

[project.scripts]
stackgen = "stackgen.cli.main:app"